2004-02-21  Paolo Mantegazza  <mantegazza@aero.polimi.it>

	* base/ipc/mq/mq.c: cleaned of unused stuff and revised for some
	  added efficiency, no more searches for free node/slotc.
	* base/include/rtai_mq.h: cleaned and revised to support changes in
	  mq.c.

2004-02-18  Michael Neuhauser  <mike@firmix.at>

	* base/include/asm-arm/rtai_hal.*: added alternative names for
	rtai_hw_*() (compatibility to x86)

2004-02-18  Luca Pizzi  <lucapizzi@hotmail.it>
	    Stefano Gafforelli  <Stefano.Gafforelli@tiscali.it>

	* configure, configure.in: added CONFIG_ARCH_PXA
	* base/arch/arm/hal/GNUmakefile.am: 2.6 support
	* base/include/asm-arm/GNUmakefile.am: arch-{pxa,ep9301} support
	* all GNUmakefile.in: regenerated because of above changes
	* base/arch/arm/hal/Makefile.kbuild: new
	* base/arch/arm/hal/hal.immed: 2.6/pxa support
	* base/include/asm-arm/rtai_atomic.h: 2.6/pxa support
	* base/include/asm-arm/rtai_hal.immmed: 2.6/pxa support
	* base/include/asm-arm/rtai_sched.h: 2.6/pxa support
	* base/include/asm-arm/rtai_vectors.h: 2.6/pxa support
	* base/include/asm-arm/rtai_fpu.h: set_tsk_used_fpu() was moved here
	from base/include/rtai_wrappers.h (because it is arch specific)

2004-02-18  Paolo Mantegazza  <mantegazza@aero.polimi.it>

	* base/include/rtai_sched.h: cleaned up unused stuff and added 
	  linux_syscall_server declaration in task_struct.
	* base/sched/sched.c and sys.c: cleaning up following the above
	  task_struct changes and using linux_syscall_server in place of 
	  the provisional variable used for testing.

2004-02-17  Luca Pizzi, (lucapizzi@hotmail.it) and
	    Stefano Gafforelli, (Stefano.Gafforelli@tiscali.it)

	* base/arch/arm/hal/mach_pxa/pxa-timer.c: added and exported a
	  volatile union for rtai_tsc (thanks to a Michael suggestion).

2004-02-17  Paolo Mantegazza  <mantegazza@aero.polimi.it>

	* base/include/rtai_wrappers.h: cancelled defines for testing if
	  a process used the FPU, it depends on archs and has been brought 